--- a/ProyectoFinal_WebApps_web/web/css/stylePrincipal.css
+++ b/ProyectoFinal_WebApps_web/web/css/stylePrincipal.css
@@ -173,8 +173,6 @@ form{
     border-bottom: 5px solid silver;
 }
 
-
-
 .datosPublicacion{
     border-bottom: 5px solid silver;
     display: flex;
@@ -205,4 +203,19 @@ header{
 .btnCrearPublicacion{
     margin-bottom: 1%;
     margin-top: 1%;
+}
+input[type="submit"]{
+    width: 100%;
+    height: 50px;
+    border: 1px solid;
+    background: #674ea7;
+    border-radius: 15px;
+    font-size: 18px;
+    color: #e9f4fb;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+}
+input[type="submit"]:hover{
+    border-color: #674ea7;
 }
