--- a/ProyectoFinal_WebApps_web/web/css/styleCrearPublicacion.css
+++ b/ProyectoFinal_WebApps_web/web/css/styleCrearPublicacion.css
@@ -52,12 +52,11 @@ header{
 form .txt_field{
     position: relative;
     border: 0;
-    border-bottom: 2.5px solid #adadad;
     margin: 30px 0;
 }
 .txt_field input{
     width: 100%;
-    padding: 0 5px;
+    padding: 0 0px;
     height: 40px;
     font-size: 16px;
     border: none;
@@ -92,7 +91,7 @@ form .txt_field{
 }
 .txt_field input:focus ~ span::before,
 .txt_field input:valid ~ span::before{
-    width: 100%;
+    width: 0%;
 }
 .pass{
     margin: -5px 0 20px 5px;
@@ -164,18 +163,32 @@ input[type="volver"]:hover{
 }
 
 .publicar{
-    border-bottom: 3.5px solid #674ea7;
+    width: 63%;
+
     display: flex;
 }
 
 .publicar input{
-    width: 15%;
+    width: 18%;
 }
 .contenido{
-    border-right: 3.5px solid #674ea7;
+    padding-left: 2%;
+    padding-right: 2%;
     position: relative;
-    width: 70%;
+    width: 100%;
 }
 textarea {
-  resize: none;
+    resize: none;
+}
+.anclado{
+    border: none;
+}
+input[type="titulo"]{
+    width: 100%;
+    border-bottom: 3.5px solid #674ea7;
+}
+.botonPublicar{
+    border: none;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
