--- a/ProyectoFinal_WebApps_web/web/css/stylePrincipal.css
+++ b/ProyectoFinal_WebApps_web/web/css/stylePrincipal.css
@@ -232,4 +232,15 @@ input[type="submit"]:hover{
     border-bottom: 10px;
     border-bottom-color: #674ea7;
 }
-
+.eliminarComentario{
+    width: 100%;
+    height: 20px;
+    border: 1px solid;
+    background: #674ea7;
+    border-radius: 15px;
+    font-size: 18px;
+    color: #e9f4fb;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+}
